--- a/csw/mgar/pkg/lang-python/graphite-web/trunk/files/httpd-graphite-vhost.conf
+++ b/csw/mgar/pkg/lang-python/graphite-web/trunk/files/httpd-graphite-vhost.conf
@@ -36,27 +36,30 @@
         # file in this directory that you can safely use, just copy it to graphite.wgsi
         WSGIScriptAlias / /etc/opt/csw/graphite/graphite.wsgi 
 
-        Alias /content/ /opt/csw/share/graphite/webapp/content/
-        <Location "/content/">
-                SetHandler None
-        </Location>
-
-        # XXX In order for the django admin site media to work you
-        # must change @DJANGO_ROOT@ to be the path to your django
-        # installation, which is probably something like:
-        # /usr/lib/python2.6/site-packages/django
-        Alias /media/ "@DJANGO_ROOT@/contrib/admin/media/"
-        <Location "/media/">
-                SetHandler None
-        </Location>
-
         # The graphite.wsgi file has to be accessible by apache. It won't
         # be visible to clients because of the DocumentRoot though.
         <Directory /etc/opt/csw/graphite/>
                 Order deny,allow
                 Allow from all
         </Directory>
+
+        Alias /content/ /opt/csw/share/graphite/webapp/content/
+        <Location "/content/">
+                SetHandler None
+        </Location>
         <Directory /opt/csw/share/graphite/webapp>
+                Order deny,allow
+                Allow from all
+        </Directory>
+
+	# Temporary fix taken from
+	#   https://github.com/graphite-project/graphite-web/issues/563
+	RedirectMatch ^/admin(.*)admin/([^/]+)/([^/]+)$ /media/$2/$3
+	Alias /media/ /opt/csw/lib/python2.7/site-packages/django/contrib/admin/static/admin/
+        <Location "/media/">
+                SetHandler None
+        </Location>
+        <Directory /opt/csw/lib/python2.7/site-packages/django/contrib/admin/static>
                 Order deny,allow
                 Allow from all
         </Directory>
