yaz/trunk: update to 5.14.2

--- a/csw/mgar/pkg/yaz/trunk/Makefile
+++ b/csw/mgar/pkg/yaz/trunk/Makefile
@@ -1,5 +1,5 @@
 NAME = yaz
-VERSION = 5.0.2
+VERSION = 5.14.2
 CATEGORIES = utils
 GARTYPE = v2
 
@@ -20,40 +20,37 @@ PA5
 SPKG_DESC_CSWlibyaz5 = Toolkit for Z39.50/SRW/SRU clients and servers, libyaz.so.5
 PKGFILES_CSWlibyaz5 = $(call pkgfiles_lib,libyaz.so.5)
 RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibiconv2
-RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibexslt0
-RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibz1
-RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibgpg-error0
+RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibgnutls28
+RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibgcrypt20
 RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibxslt1
 RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibxml2-2
-RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibgnutls28
-RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibgcrypt11
+RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibexslt0
+RUNTIME_DEP_PKGS_CSWlibyaz5 += CSWlibgcc-s1
 
 PACKAGES += CSWlibyaz-icu5
 SPKG_DESC_CSWlibyaz-icu5 += $(DESCRIPTION), libyaz_icu.so.5
 PKGFILES_CSWlibyaz-icu5 += $(call pkgfiles_lib,libyaz_icu.so.5)
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibiconv2
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibxml2-2
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibyaz4
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibz1
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibgpg-error0
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibxslt1
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibicui18n52
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibexslt0
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibicuuc52
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibgcrypt11
-RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibicudata52
+RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibicui18n55
+RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibicuuc55
+RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibyaz5
+RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += CSWlibgcc-s1
+#only on sparc
+RUNTIME_DEP_PKGS_CSWlibyaz-icu5_sparc += CSWlibiconv2
+RUNTIME_DEP_PKGS_CSWlibyaz-icu5_sparc += CSWlibgcrypt20
+RUNTIME_DEP_PKGS_CSWlibyaz-icu5 += $(RUNTIME_DEP_PKGS_CSWlibyaz-icu5_$(GARCH))
+
 
 PACKAGES += CSWlibyaz-server5
 SPKG_DESC_CSWlibyaz-server5 += $(DESCRIPTION), libyaz_server.so.5
 PKGFILES_CSWlibyaz-server5 += $(call pkgfiles_lib,libyaz_server.so.5)
-RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibiconv2
-RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibexslt0
-RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibyaz4
-RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibz1
-RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibgpg-error0
-RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibxslt1
+RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibyaz5
 RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibxml2-2
-RUNTIME_DEP_PKGS_CSWlibyaz-server5S_CSWlibyaz-server4 += CSWlibgcrypt11
+RUNTIME_DEP_PKGS_CSWlibyaz-server5 += CSWlibgcc-s1
+#only on sparc
+RUNTIME_DEP_PKGS_CSWlibyaz-server5_sparc += CSWlibiconv2
+RUNTIME_DEP_PKGS_CSWlibyaz-server5_sparc += CSWlibgcrypt20
+RUNTIME_DEP_PKGS_CSWlibyaz-server5 += $(RUNTIME_DEP_PKGS_CSWlibyaz-server5_$(GARCH))
+4 += CSWlibgcrypt11
 
 PACKAGES += CSWlibyaz-dev
 SPKG_DESC_CSWlibyaz-dev = Development files for libyaz
@@ -82,31 +79,19 @@ OBSOLETED_BY_CSWlibyaz-dev += CSWlibyaz-devestallation.unix.html
 
 PACKAGES += CSWyaz
 SPKG_DESC_CSWyaz = Toolkit for Z39.50/SRW/SRU c# PKGFILES is catchall
-RUNTIME_DEP_PKGS_CSWyaz += CSWlibiconv2
 RUNTIME_DEP_PKGS_CSWyaz += CSWlibyaz-server5
 RUNTIME_DEP_PKGS_CSWyaz += CSWlibyaz5
-RUNTIME_DEP_PKGS_CSWyaz += CSWlibicui18n52_CSWyaz += CSWlibz1
-RUNTIME_DEP_PKGS_CSWyaz += CSWlibxml2-2
+RUNTIME_DEP_PKGS_CSWyaz += CSWlibicui18n55yaz += CSWlibxml2-2
 RUNTIME_DEP_PKGS_CSWyaz += CSWlibreadline6
 RUNTIME_DEP_PKyaz-icu5
-RUNTIME_DEP_PKGS_CSWyaz += CSWlibicuuc52 +# These are usually not needed, but -z ignore does not work the way it used to
-CHECKPKG_OVERRIDES_CSWlibyaz5 += surplus-dependency|CSWlibz1
-CHECKPKG_OVERRIDES_CSWlibyaz5 += surplus-dependency|CSWlibgcrypt11
-CHECKPKG_OVERRIDES_CSWlibyaz5 += surplus-dependency|CSWlibgpg-error0
-CHECKPKG_OVERRIDES_CSWyaz += surplus-dependency|CSWlibiconv2
-CHECKPKG_OVERRIDES_CSWlibyaz-server5 += surplus-dependency|CSWlibgcrypt11
-CHECKPKG_OVERRIDES_CSWlibyaz-server5 += surplus-dependency|CSWlibiconv2
-CHECKPKG_OVERRIDES_CSWlibyaz-server5 += surplus-dependency|CSWlibgpg-error0
-CHECKPKG_OVERRIDES_CSWlibyaz-server5 += surplus-dependency|CSWlibexslt0
-CHECKPKG_OVERRIDES_CSWlibyaz-server5 += surplus-dependency|CSWlibz1
-CHECKPKG_OVERRIDES_CSWlibyaz-server5 += surplus-dependency|CSWlibxslt1
-CHECKPKG_OVERRIDES_CSWlibyaz-icu5 += surplus-dependency|CSWlibgcrypt11
-CHECKPKG_OVERRIDES_CSWlibyaz-icu5 += surplus-dependency|CSWlibiconv2
-CHECKPKG_OVERRIDES_CSWlibyaz-icu5 += surplus-dependency|CSWlibicudata52
-CHECKPKG_OVERRIDES_CSWlibyaz-icu5 += surplus-dependency|CSWlibgpg-error0
-CHECKPKG_OVERRIDES_CSWlibyaz-icu5 += surplus-dependency|CSWlibexslt0
-CHECKPKG_OVERRIDES_CSWlibyaz-icu5 += surplus-dependency|CSWlibz1
-CHECKPKG_OVERRIDES_CSWlibyaz-icu5 += surplus-dependency|CSWlibxslt1 += CSWlibicudata48
+RUNTIME_DEP_PKGS_CSWyaz += CSWlibicuuc55
+RUNTIME_DEP_PKGS_CSWyaz += CSWlibxml2-2
+#only on sparc
+RUNTIME_DEP_PKGS_CSWyaz_sparc += CSWlibiconv2
+RUNTIME_DEP_PKGS_CSWyaz_sparc += CSWlibgcrypt20
+RUNTIME_DEP_PKGS_CSWyaz += $(RUNTIME_DEP_PKGS_CSWyaz_$(GARCH))
+
+ += CSWlibicudata48
 
 REINPLACE_USRLOCAL += doc/yaz-config.1
 
@@ -126,5 +111,11 @@ REINPLACE_MATCH_etc = /usr/share/yaz/etc
 REINPLACE_WITH_etc = $(sysconfdir)
 REINPLACE_FILES_etc += doc/tools.xml
 
-BUILD64_LIBS_ONLY = 1
-CONFIGURE_Ainclude gar/category.mk
+BUI
+GARCOMPILER = GCC4
+
+CONFIGURE_ARGS = $(DIRPATHS)
+CONFIGURE_ARGS +=  --without-memcached
+CONFIGURE_ARGS +=  --without-redis
+
+include gar/category.mk
