lang-python/pytz/trunk: Update to 2015.4

--- a/csw/mgar/pkg/lang-python/pytz/trunk/Makefile
+++ b/csw/mgar/pkg/lang-python/pytz/trunk/Makefile
@@ -1,10 +1,10 @@
 # $Id$
 NAME = pytz
-VERSION = 2014.3
+VERSION = 2015.4
 CATEGORIES = python
 GARTYPE = v2
 
-DESCRIPTION = Pytz brings the Olson timezone database into Python.
+DESCRIPTION = Pytz brings the Olson timezone database into Python
 define BLURB
   pytz brings the Olson tz database into Python. This library allows
   accurate and cross platform timezone calculations using Python 2.3
@@ -14,11 +14,13 @@ define BLURB
 endef
 
 MASTER_SITES = $(PYPI_MIRROR)
-DISTFILES  = $(DISTNAME).tar.bz2
-VENDOR_URL = http://$(NAME).sourceforge.net/
-PACKAGES = CSWpy-tz
+DISTFILES += $(DISTNAME).tar.bz2
 
-LICENSE = LICENSE.txt
-ARCHALL = 1
+VENDOR_URL = http://pythonhosted.org/pytz/
+
+PACKAGES += CSWpy-tz
+SPKG_DESC_CSWpy-tz = Pytz brings the Olson timezone database into Python
+# PKGFILES is catchall
+ARCHALL_CSWpy-tz = 1
 
 include gar/category.mk
